[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://dkiiblr08a488" path="res://src/ui/game_over.gd" id="1"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Meilleur score: 0"
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RestartButton" type="Button" parent="Control/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = ""

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = ""

[node name="QuitButton" type="Button" parent="Control/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = ""

[connection signal="pressed" from="Control/VBoxContainer/ButtonsContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonsContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_pressed"]
